syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/polshe-v/microservices_chat_server/pkg/chat_v1;chat_v1";

service ChatV1 {
	rpc Create(CreateRequest) returns (CreateResponse); 
	rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
	rpc Connect(ConnectRequest) returns (stream Message);
	rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

message Chat {
	repeated string usernames = 1;
}

message Message {
	string from = 1;
	string text = 2;
	google.protobuf.Timestamp timestamp = 3;
}

message CreateRequest {
	Chat chat = 1;
}

message CreateResponse {
	string id = 1;
}

message DeleteRequest {
	string id = 1;
}

message SendMessageRequest {
	string chat_id = 1;
	Message message = 2;
}

message ConnectRequest {
	string chat_id = 1;
	string username = 2;
}
